[tool.poetry]
name = "geodude"
version = "0.1.0"
description = "Local geocoding cache"
authors = ["crccheck <c@crccheck.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
